--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,9 +5,15 @@ edition = "2021"
 
 [dependencies]
 axum = "0.8.1"
+candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main" }
+candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }
+tokenizers = "0.15.0"
 candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.2", features = ["cuda"] }
+clap = { version = "4.5.26", features = ["derive"] }
 hf-hub = { version = "0.4.1", features = ["tokio"] }
 rig-core = "0.6.1"
 serde = "1.0.217"
 serde_json = "1.0.135"
 tokio = { version = "1.43.0", features = ["full"] }
+lazy_static = "1.5.0"
+anyhow = "1.0.95"
