--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,7 +8,7 @@ axum = "0.8.1"
 candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main" }
 candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }
 tokenizers = "0.15.0"
-candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.2", features = ["cuda"] }
+candle-core = { git = "https://github.com/huggingface/candle", branch = "main" }
 clap = { version = "4.5.26", features = ["derive"] }
 hf-hub = { version = "0.4.1", features = ["tokio"] }
 rig-core = "0.6.1"
@@ -17,3 +17,5 @@ serde_json = "1.0.135"
 tokio = { version = "1.43.0", features = ["full"] }
 lazy_static = "1.5.0"
 anyhow = "1.0.95"
+async_once = "0.2.6"
+surrealdb = { version = "2.1.4", features = ["kv-rocksdb"] }
