--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -21,3 +21,7 @@ async_once = "0.2.6"
 surrealdb = { version = "2.1.4", features = ["kv-rocksdb"] }
 pdf-extract = "0.8.0"
 shell-words = "1.1.0"
+
+[lib]
+name = "lib"
+path = "src/lib.rs"
